# ines_sdk_c

./: .gitmodules  CMakeLists.txt  build.sh  config.cfg  license.txt
extlibs/ini/: CMakeLists.txt  ini.c  ini.h
extlibs/json/: CMakeLists.txt  json.c  json.h
extlibs/libwolfssl/patchwolfsslvaultic/wolfssl/: user_settings.h
extlibs/libwolfssl/patchwolfsslvaultic/wolfssl/cmake/: functions.cmake
extlibs/libwolfssl/patchwolfsslvaultic/wolfssl/wolfcrypt/src/port/wisekey/: README.md  vaultic.c
extlibs/libwolfssl/patchwolfsslvaultic/wolfssl/wolfssl/wolfcrypt/port/wisekey/: vaultic.h  vaultic_tls.h
include/: wisekey_Crypto_Tools.h  wisekey_Http_Request_Manager.h  wisekey_Ines_API.h  wisekey_Tools.h  wisekey_ZTP_settings.h
lib/libVaultIC/292/vaultic_tls-2xx/src/: CMakeLists.txt  vaultic_tls.c  vaultic_tls.h  vaultic_tls_config.h  vaultic_tls_priv.h
lib/libVaultIC/408/vaultic_tls-4xx/src/: CMakeLists.txt  functions.cmake  vaultic_tls.c  vaultic_tls.h  vaultic_tls_config.h
src/: wisekey_Crypto_Tools.c  wisekey_Http_Request_Manager.c  wisekey_Ines_API.c  wisekey_Tools.c
